--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -1,5 +1,5 @@
 #dashboard{
-
+    padding: 75px 0;
     ul{
         list-style: none;
         
